--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="inicio" class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
-            <h1>Bienvenidos a Mi Empresa</h1>
+            <h1>Bienvenidos a Mi Empresa Zzz</h1>
             <p>Tu socio confiable en soluciones empresariales.</p>
             <a href="#contacto" class="cta-button">Contáctanos</a>
         </div>
