--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="hero-background"></div>
         <div class="hero-content">
             <h1>Bienvenidos a Mi Empresa Zzz</h1>
-            <p>Tu socio confiable en soluciones empresariales.</p>
+            <p>Tu mejor solucion a la empresa.</p>
             <a href="#contacto" class="cta-button">Contáctanos</a>
         </div>
     </section>
